tests/conformance/valid/recursion_with_resources.ecl
// SPDX-License-Identifier: PMPL-1.0-or-later
// SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

// Test: Recursive function with resource tracking
// Expected: Success - recursion depth tracked

@requires(energy: 100J)
fn factorial(n: int) -> int {
    if n <= 1 {
        1
    } else {
        n * factorial(n - 1)
    }
}

fn main() {
    let result = factorial(5);
    assert(result == 120);
}
